tests/builds/pass/functionDeclaration.cpl
int test()
{
	return 0;
}

int main(int argc)
{
	return test();
}

