tests/builds/fail/structDeclaration.cpl
struct Employee{
	int age;
	int salary;
};

int main(){
	return 0;
}
